--- a/profile-3.html
+++ b/profile-3.html
@@ -116,7 +116,10 @@
                                     </div>
                                     <div class="file">
                                         <span>Нет файла</span>
-                                        <input type="file">
+                                        <div class="input_file">
+                                            <input type="file">
+                                            <div class="btn">Сменить аватар</div>
+                                        </div>
                                     </div>
                                 </div>
                                 <div class="inputs">
